bin/testsuite/tests/compiler/src/errors/compiler5267.swg
//#global testerror "Err0250"

#if false do
    func toto(x: s32) {}
func toto(x: s8) {}
